--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -23,6 +24,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^22.10.2",
     "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.20",
